{
    "name": "playerActionControls",
    "maps": [
        {
            "name": "Basic",
            "id": "d58239ab-c63b-4a6d-8ff2-843e804940d1",
            "actions": [
                {
                    "name": "xButton",
                    "type": "Button",
                    "id": "0c077aa9-cf56-4239-a95a-d6cea0d4a18d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "yButton",
                    "type": "Button",
                    "id": "0394ebc7-1b3a-4350-8d8d-17e3a26ed3a5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "aButton",
                    "type": "Button",
                    "id": "005a84ec-09d4-459b-9319-7769f6593cdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "bButton",
                    "type": "Button",
                    "id": "16dfea11-ca91-456e-ade3-6807d155ba45",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "45666870-4eec-483d-a345-27b499b7de68",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "450f6766-edb8-4bc1-8f6a-0b1c2361f65a",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "xButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba457014-9a23-4741-8fbe-0c711b1b65fd",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "yButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d81172a2-fe92-4ea2-b1b0-315af95c7435",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "aButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93652a51-2d9f-4d39-abdc-0ed0396ed1d3",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "bButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aceaa418-d96b-4cfb-ac44-2a305c8cdccc",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "bButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b31cda3-cbbc-409b-9e39-2aa4c3f4b7f7",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}